<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editPeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/editPeli"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittituloInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />

        <EditText
            android:id="@+id/editdirectorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/director"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />

        <EditText
            android:id="@+id/editanoinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/ano"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />

        <Spinner
            android:id="@+id/editgeneroSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/genero"
            tools:layout_height="48dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/peliculasbg"
            app:srcCompat="@drawable/django"
            android:contentDescription="@string/peliculaspattern" />

        <Button
            android:id="@+id/button_first3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-80dp"
            android:layout_marginEnd="20dp"
            android:text="@string/guardar"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>